fix submenus not scrolling when overflowed

--- a/src/extension/features/accounts/scrollable-edit-menu/index.css
+++ b/src/extension/features/accounts/scrollable-edit-menu/index.css
@@ -16,6 +16,6 @@
   position: static !important;
   display: block !important;
   margin: 0;
-  height: 100%;
-  overflow: hidden;
+  max-height: 100%;
+  overflow-y: auto;
 }
